5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1650_2730.log
== TEST (2019-04-12 02:22:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero x   "))
y=float(input("numero y    "))
if(x>0 & y>0):
	print("superiores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x>0 & y>0):
TypeError: unsupported operand type(s) for &: 'int' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 02:23:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero x   "))
y=float(input("numero y    "))
if(x>0;y>0):
	print("superiores")
-- ERROR:
File "XXXX", line 4
    if(x>0;y>0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 02:28:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero x   "))
y=float(input("numero y    "))
if(y>0):
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.179226
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:05:35) 
-- CODE:
x=float(input("numero x   "))
y=float(input("numero y    "))
if(y>0):
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.127599
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:52:40) 
-- CODE:
x=float(input("numero x   "))
y=float(input("numero y    "))
if(y>0):
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.1664
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:12:47) 
-- CODE:
x=float(input("numero x   "))
y=float(input("numero y    "))
if(y>0):
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.147865
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
